# book_store_demoqa_web_api_tests

./: README.md  project.py  pyproject.toml
book_store_demoqa_web_api_tests/data/: users.py
book_store_demoqa_web_api_tests/models/api/: book_store_api.py
book_store_demoqa_web_api_tests/models/web/: book_store.py  login.py  profile.py
book_store_demoqa_web_api_tests/utils/: actions_via_api.py  api_helper.py  path.py
tests/api/: test_account.py  test_bookstore.py
tests/api/resources/schemas/: add_book.json  get_book.json  get_user.json  post_account.json  post_token.json
tests/web/: conftest.py  test_bookstore.py  test_login.py  test_profile.py
